--- a/table.html
+++ b/table.html
@@ -24,8 +24,8 @@
       <br>
 
       <div class="text-center">
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
-        <a href="/"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
+        <a href=""><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+        <a href="index.html"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
       </div>
     </div>
 
@@ -58,7 +58,7 @@
     <footer class="footer mt-4">
       <div class="container">
         <p>Control Panel</p>
-        <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API
+        <p><a href="#" id="clear">Clear Table</a> | <a href="">API Table Link</a> | <a href="\">API
             Wait List</a>
       </div>
     </footer>
@@ -73,7 +73,7 @@
  
 
   function runTableQuery() {
-    $.ajax({ url: "/api/tables", method: "GET" })
+    $.ajax({ url: "", method: "GET" })
       .then(function(tableData) {
 
         console.log(tableData);
@@ -101,7 +101,7 @@
 
   function runWaitListQuery() {
 
-    $.ajax({ url: "/api/waitlist", method: "GET" })
+    $.ajax({ url: "", method: "GET" })
       .then(function(waitData) {
 
         console.log(waitData);
