--- a/table.html
+++ b/table.html
@@ -24,7 +24,7 @@
       <br>
 
       <div class="text-center">
-        <a href=""><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+        <a href="reservation.html"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
         <a href="index.html"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
       </div>
     </div>
