--- a/reservation.html
+++ b/reservation.html
@@ -97,7 +97,7 @@
 
     
 
-    $.post("/api/tables", newReservation,
+    $.post("reservations.html", newReservation,
       function(data) {
 
         if (data) {
